# sms-binary-classification

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: threshold.txt
notebooks/: 01_eda.ipynb  02_data_preprocessing.ipynb  03_model_evaluation.ipynb
reports/: metrics.json  model_card.md  model_evaluation_summary.md
sms_binary_classification/: dataset.py  features.py  plots.py
sms_binary_classification/modeling/: predict.py  train.py
src/: __init__.py  dataset.py
src/modeling/: predict.py  train.py
