[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "create a mod spam or ham. it's binary classifiction problem"
authors = [
  { name = "mohamed khaled" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "nbstripout>=0.8.1",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pyarrow>=21.0.0",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "tqdm",
    "typer",
    "wordcloud>=1.9.4",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["sms_binary_classification"]
include = ["pyproject.toml", "sms_binary_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sms_binary_classification"]
force-sort-within-sections = true

